<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    
    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/icon_agua"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/container_header"
        app:layout_constraintStart_toStartOf="@id/container_header"/>
    
    <ImageView
        android:id="@+id/ic_redefinir"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_refresh_24"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/container_header"
        app:layout_constraintEnd_toEndOf="@id/container_header"/>
    
    <EditText
        android:id="@+id/edit_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_texto"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:textAlignment="center"
        android:padding="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toStartOf="parent"
        />
    
    <Button
        android:id="@+id/btn_peq"
        android:text="@string/peq"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/edit_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_med"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_med"
        android:text="@string/med"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintStart_toEndOf="@id/btn_peq"
        app:layout_constraintEnd_toStartOf="@id/btn_grand"
        app:layout_constraintTop_toTopOf="@id/btn_peq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_grand"
        android:text="@string/grand"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintStart_toEndOf="@id/btn_med"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_peq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_hoje"
        android:text="@string/hoje"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.30"
        android:textSize="34sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_total"
        tools:text="100ml"
        android:text="0ml"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_hoje"
        android:textSize="48sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_lembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_lembrete"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginTop="35dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/txt_total"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_alarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_alarme"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/txt_total"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_hr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_hora"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_lembrete"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_doispontos"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_lembrete"
        app:layout_constraintStart_toEndOf="@id/txt_hr"/>

    <TextView
        android:id="@+id/txt_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_minutos"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_lembrete"
        app:layout_constraintStart_toEndOf="@id/txt_dois_pontos"/>

      









</androidx.constraintlayout.widget.ConstraintLayout>